--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -8,6 +8,10 @@ jobs:
     steps: 
       - name: Checkout
         uses: actions/checkout@v6.0.1
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v6.1.0
+      - name: install dependencies
+        run: npm install && npm run build
 
 
 
