--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -12,6 +12,9 @@ jobs:
         uses: actions/setup-node@v6.1.0
       - name: install dependencies
         run: npm install && npm run build
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v6.0.0
+      
 
 
 
