--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -14,6 +14,8 @@ jobs:
         run: npm install && npm run build
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v6.0.0
+        with:
+          path: .
       
 
 
