--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -1,6 +1,10 @@
 name: CI
 
-on: workflow_dispatch
+on: 
+  push:
+    branches:
+      - main
+    
 
 jobs: 
   build:
@@ -16,6 +20,11 @@ jobs:
         uses: actions/upload-artifact@v6.0.0
         with:
           path: .
+  deploy:
+    runs-on: macos-latest
+    steps:
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v7.0.0
       
 
 
