--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           path: .
   deploy:
+    needs: build
     runs-on: macos-latest
     steps:
       - name: Download a Build Artifact
