--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -16,18 +16,21 @@ jobs:
         uses: actions/setup-node@v6.1.0
       - name: install dependencies
         run: npm install && npm run build
+      - name: Zip build folder
+        run: zip -r build.zip build        
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v6.0.0
         with:
-          path: .
+          path: build.zip
   deploy:
     needs: build
     runs-on: macos-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v6.0.1      
       - name: Download a Build Artifact
         uses: actions/download-artifact@v7.0.0
-        with:
-          name: artifact
+
       
 
 
