--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -30,6 +30,16 @@ jobs:
         uses: actions/checkout@v6.0.1      
       - name: Download a Build Artifact
         uses: actions/download-artifact@v7.0.0
+      - name: SCP Files
+        uses: appleboy/scp-action@v1
+        with:
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USER }}
+          password: ${{ secrets.VM_PASSWORD }}
+          port: 22
+          source: build.zip
+          target: /tmp
+          
 
       
 
