Change directory to /tmp before unzipping build.zip

--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -49,8 +49,10 @@ jobs:
           script: |
             sudo apt update
             sudo apt install nginx -y
+            cd /tmp
             unzip -o build.zip
             sudo cp -r build/* /var/www/html/
+
           
 
       
