--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -24,7 +24,7 @@ jobs:
           path: build.zip
   deploy:
     needs: build
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v6.0.1      
@@ -42,14 +42,15 @@ jobs:
       - name: Execute remote SSH commands using password
         uses: appleboy/ssh-action@v1
         with:
-          host: ${{ secrets.VM_HOST }}
+          host: ${{ secrets.HOST }}
           username: ${{ secrets.VM_USER }}
           password: ${{ secrets.VM_PASSWORD }}
           port: 22
           script: |
             sudo apt update
             sudo apt install nginx -y
-            sudo mkdir -p /var/www/html
+            sudo apt install unzip -y
+            # sudo mkdir -p /var/www/html
             cd /tmp
             sudo unzip -o build.zip
             sudo cp -r build/* /var/www/html/
