--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -33,7 +33,7 @@ jobs:
       - name: SCP Files
         uses: appleboy/scp-action@v1
         with:
-          host: ${{ secrets.VM_HOST }}
+          host: ${{ secrets.HOST }}
           username: ${{ secrets.VM_USER }}
           password: ${{ secrets.VM_PASSWORD }}
           port: 22
