--- a/.github/workflows/workflow004.yml
+++ b/.github/workflows/workflow004.yml
@@ -34,7 +34,8 @@ jobs:
           name: Build_Artifact
           path: /build
       
-  deploy: 
+  deploy:  
+    needs: build
     runs-on: ubuntu-latest
     steps:
 
