--- a/.github/workflows/workflow004.yml
+++ b/.github/workflows/workflow004.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v6.0.0
         with:
           # name: Build_Artifact
-          path: /build
+          path: build/*
       
   deploy:  
     needs: build
