--- a/.github/workflows/workflow004.yml
+++ b/.github/workflows/workflow004.yml
@@ -20,9 +20,10 @@ jobs:
         # id: cache
         with:
           path: |
-            "~/.npm , node_modules"
+            ~/.npm
+            node_modules
           key: ${{ runner.os }}-node
-          restore-keys: ${{ runner.os }}-node
+          # restore-keys: ${{ runner.os }}-node
           
         
       - name: Install dependencies and build
@@ -32,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v6.0.0
         with:
           # name: Build_Artifact
-          path: build/*
+          path: build/
       
   deploy:  
     needs: build
@@ -51,7 +52,7 @@ jobs:
           host: ${{ secrets.HOST }}
           password: ${{ secrets.VM_PASSWORD }}
           port: 22
-          source: /build/*
+          source: /build/
           target: /tmp/react-build
           
       - name: Execute remote SSH commands using password
