--- a/.github/workflows/pipeline001.yml
+++ b/.github/workflows/pipeline001.yml
@@ -1,10 +1,13 @@
 name: main
-on: workflow_dispatch
+on: 
+  push:
+    branches:
+      - main
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     name: Build and test
     steps:
       - uses: actions/checkout@v4
-      - uses: bahmutov/npm-install@v1
-      - run: npm t
+      - uses: actions/setup-node@v6.1.0
+      - run: npm ci && npm run build
