--- a/.github/workflows/workflow003.yml
+++ b/.github/workflows/workflow003.yml
@@ -26,8 +26,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v6.0.1      
+      # - name: Checkout
+      #   uses: actions/checkout@v6.0.1      
       - name: Download a Build Artifact
         uses: actions/download-artifact@v7.0.0
       - name: SCP Files
