--- a/.github/workflows/workflow004.yml
+++ b/.github/workflows/workflow004.yml
@@ -52,7 +52,7 @@ jobs:
           host: ${{ secrets.HOST }}
           password: ${{ secrets.VM_PASSWORD }}
           port: 22
-          source: Build_Artifact
+          source: build
           target: /tmp/react-build
           
       - name: Execute remote SSH commands using password
