--- a/.github/workflows/pipeline001.yml
+++ b/.github/workflows/pipeline001.yml
@@ -1,8 +1,8 @@
 name: main
-on: 
-  push:
-    branches:
-      - main
+on: workflow_dispatch
+  # push:
+  #   branches:
+  #     - main
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
