--- a/.github/workflows/workflow004.yml
+++ b/.github/workflows/workflow004.yml
@@ -65,7 +65,7 @@ jobs:
           script: |
             sudo apt update
             sudo apt install -y nginx
-            sudo cp -r /tmp/react-build/* /var/www/html
+            sudo cp -r /tmp/react-build/build/* /var/www/html
           
           
 
